# stellar-payment-dapp

./: .gitignore  Cargo.toml  README.md  environments.toml  eslint.config.js  keys.md  package-lock.json  package.json  setup_dev_env.sh  smoky-stellar-gateway.php
.agent/rules/: commit-standards.md  frontend-deployment.md  frontend_deployment.md  modularity.md  soroban-patterns.md
.agent/workflows/: blend-position.md  decode-muxed.md  deploy-plugin.md  deploy-testnet.md  fund-buyer.md  fund.md  get-G.md  get-S.md  release-escrow.md  setup-tokens.md  show-funds.md  swap-xlm-usdc.md  test-contracts.md
backend/: convert.go  enrollment.go  go.mod  main.go  woocommerce.go
contracts/payment_escrow/: Cargo.toml
contracts/payment_escrow/src/: lib.rs  test.rs
contracts/pool_contract/: Cargo.toml
contracts/pool_contract/src/: lib.rs  test.rs
contracts/zmoke_minter/: Cargo.toml
contracts/zmoke_minter/src/: lib.rs  test.rs
docs/: DEPLOY_FRONTEND.md  ROADMAP.md  cap-0075.md  cap-0080.md  design_zmoke_spending.md  implementation_plan.md  option_b_implementation_plan.md  reflector_integration_summary.md  specs.md  task.md  tokenomics.md  woocommerce_setup.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DepositForm.tsx  SecretKeyModal.tsx  StakingPanel.tsx  TokenDashboard.tsx  WalletConnect.tsx
frontend/src/pages/: Account.tsx
frontend/src/services/: BlendService.ts  soroban.ts
tools/: decoder.py  setup_tokens.sh  setup_zmoke.sh  sign_quote.py
