[package]
name = "payment-escrow"
description = "Smart Payment Platform with Escrow and Volatility Protection"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[package.metadata.stellar]
cargo_inherit = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "23.1.0"
stellar-registry = "0.0.4"

[dev-dependencies]
stellar-xdr = { version = "23.0.0", features = ["curr", "serde"] }
soroban-sdk = { version = "23.1.0", features = ["testutils"] }
ed25519-dalek = "2.2.0"
rand = "0.8.5"
