[package]
name = "pool-contract"
description = "Payment Pool with Blend Yield Integration"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[package.metadata.stellar]
cargo_inherit = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk.workspace = true
blend-contract-sdk.workspace = true

[dev-dependencies]
stellar-xdr = { version = "25.0.0", features = ["curr", "serde"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
